# savior-daemon

./: Cargo.toml  README.md  cliff.toml  settings.json
src/: channel.rs  config.rs  lib.rs  main.rs  process.rs  store.rs
src/channel/: redis_tool.rs
src/process/: listener.rs  register.rs
src/store/: local_file_db.rs
