[package]
name = "savior-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
if-addrs = "0.13.3"
redis = "0.27.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["fast-rng", "macro-diagnostics", "v4"] }
